Therion 5.6.0 (in progress):

therion:
 * support for colour models: cmyk, rgb, gray (see the color-model layout
   option in the Thbook)
 * reimplemented internal processing of patterns and transparent colors in
   MetaPost (incompatible changes: the drawing option 'withtransparentcolor',
   macro 'def_transparent_rgb' and predefined transparent colors tr_bg,
   tr_white, tr_black were removed; use the drawing option
   'withcolor <color> withtransparency <number>' instead)
 * support for double number system in MetaPost (this eliminates the current
   MetaPost limits; see the chapter Limitations in the Appendix of the Thbook)
 * tex-refs-registers <on/off> initialization file option added (see the
   chapters Initialization files and Limitations in the Appendix of the Thbook)
 * support for LuaTeX as an alternative to pdfTeX
 * support for parallel processing of data when creating the 3D model
 * support for both relative and absolute paths in the \loadpicture macro
 * updates Serbian translation
 * bugs fixed:
   - ISO8859-2 literals in the source code caused clang warnings
   - removed unnecessary SOURCE_DATE_EPOCH in the thbook Makefile
   - fixed numerical instability in l_overhang_SKBB
   - swapped anastomosis & karren symbols
   - other minor fixes
 * updated shapelib
 
loch:
 * Tools->Selection - only displays selected surveys
 * bugs fixed:
   - missing title
   - autorotation issues

infrastructure:
 * support for CMake builds (thanks to Matěj Plch)

--------------------------------------------------------------------------------

Therion 5.5.7 (2021-02-06):

therion:
 * added --generate-output-crc, --verify-output-crc options
 * error raised when unknown command line option used
 * version number ends with '-dev' if there are uncommitted local changes
 * optimizations:
   - much faster processing of fixed stations with associated CRS data
   - faster check for optional fonts
 * bugs fixed: